# HearthCardAssetExtractor

./: .gitignore  LICENSE  README.md  hearth-card-asset.spec  pyproject.toml
.github/workflows/: release.yml
src/: build_script.py  cli.py  context.py  helpers.py  parse_args.py
src/extract/: card.py  image.py
src/extract/audio/: card_sound_spell.py  core.py  effect_def.py  emote.py
src/typed_dicts/: __init__.py  card_def.py  card_sound_spell.py
src/unity3d/: __init__.py  asset_manifest.py  common.py
src/utils/: __init__.py  extract_audio.py  extract_image.py  helper.py
